tests/NormalTests/paczka1/small_fuzzy/43981338.err
Error in line 3: swI S491 38,16
Error in line 5: A477 A111 63,2
Error in line 10: A477 A477 78,0
